fix(synapse): add vector API jvmArguments to spring-boot-maven-plugin